# 3labOOP

./: CMakeLists.txt  README.md  main.cpp
include/: Figure.h  FigureArray.h  Pentagon.h  Rhombus.h  Trapezoid.h
src/: Figure.cpp  FigureArray.cpp  Pentagon.cpp  Rhombus.cpp  Trapezoid.cpp
tests/: test_figures.cpp
